(Fix) Fixed weird alignment issues for forms. Changed default border colors for form inputs.

--- a/components/form.css
+++ b/components/form.css
@@ -4,11 +4,12 @@ Form inputs CSS File
 
 label {
     display:block;
-    font-family: var(--font-heading);
-    font-size:0.8em;
-    font-weight:bold;
-    color:black;
+    font-family: var(--font-text);
+    font-size:0.9em;
+    color:#444;
     margin-left:10px;
+    margin-top:10px;
+    margin-bottom: 2px;
 }
 
 input {
@@ -17,15 +18,17 @@ input {
     padding-bottom:14px;
     min-width:250px;
     font-family: var(--font-text);
+    color:#444;
     border:none;
     border-radius: var(--radius-border);
     background-color: transparent;
     border:none;
-    border:1.4px solid var(--primary);
+    border:1.4px solid #444;
     outline:none;
 }
 
 input:focus {
+    border-color: var(--primary);
     border-left:4px solid var(--primary);
 }
 
